// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Container Component Basic Rendering should render a simple container 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><p>Hello World</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Basic Rendering should include table structure 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><div>Content</div></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Basic Rendering should include default max-width style 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Basic Rendering should have email-safe table attributes 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><div>Test</div></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Background Color should apply backgroundColor prop 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; background-color: #f0f0f0">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Background Color should handle hex color codes 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; background-color: #ff5a5f">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Background Color should handle named colors 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; background-color: white">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Background Color should handle rgb colors 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; background-color: rgb(255, 255, 255)">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Padding should apply padding prop 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; padding: 20px">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Padding should handle complex padding values 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; padding: 10px 20px 30px 40px">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Padding should handle em units 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; padding: 1em 2em">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Custom Styles should apply custom style properties 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1)">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Custom Styles should merge custom styles with default max-width 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; border: 1px solid #ccc">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Custom Styles should allow overriding max-width 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 600px">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Custom Styles should handle numeric style values 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; border-width: 2px; opacity: 0.9">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Combined Props should apply all props together 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; border: 1px solid #e0e0e0; border-radius: 4px; background-color: #ffffff; padding: 40px">
  <tbody>
    <tr style="width: 100%">
      <td><h1>Title</h1><p>Body text</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Combined Props should handle empty style object with other props 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; background-color: #f5f5f5; padding: 20px">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component HTML Safety should preserve children HTML content 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><p>This is <strong>bold</strong> text</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component HTML Safety should handle children with special characters 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><p>Price: $100 & Save 20%</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component HTML Safety should handle complex nested HTML 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td>
          <div>
            <h1>Title</h1>
            <p>Paragraph with <a href="#">link</a></p>
            <ul>
              <li>Item 1</li>
              <li>Item 2</li>
            </ul>
          </div>
        </td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Edge Cases should handle empty children 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Edge Cases should handle whitespace-only children 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td>   
   </td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Edge Cases should handle minimal props with no optional fields 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><p>Basic</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Edge Cases should handle very long content 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em">
  <tbody>
    <tr style="width: 100%">
      <td><p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Edge Cases should handle style with many properties 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 600px; margin: 0 auto; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); background-color: #fafafa; padding: 20px">
  <tbody>
    <tr style="width: 100%">
      <td><p>Content</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Real-world Use Cases should render email wrapper container 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; font-family: Arial, sans-serif; background-color: #f4f4f4; padding: 40px 20px">
  <tbody>
    <tr style="width: 100%">
      <td><h1>Welcome Email</h1><p>Thank you for signing up!</p></td>
    </tr>
  </tbody>
</table>"
`;

exports[`Container Component Real-world Use Cases should render card-style container 1`] = `
"<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="max-width: 37.5em; border: 1px solid #e0e0e0; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); background-color: white; padding: 30px">
  <tbody>
    <tr style="width: 100%">
      <td><div class='card'>Content</div></td>
    </tr>
  </tbody>
</table>"
`;
